// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gel-layout() creates a layout to wrap around items 1`] = `
".gel-layout {
  direction: ltr;
  display: flex;
  flex-flow: row wrap;
  flex-grow: 1;
  list-style: none;
  margin-right: 0;
  margin-left: -8px;
  padding-right: 0;
  padding-left: 0;
  text-align: left;
}
@media (min-width: 37.5em) {
  .gel-layout {
    margin-left: -16px;
  }
}"
`;

exports[`gel-layout() creates a layout to wrap around items, with an optional whitespace adjustment 1`] = `
".gel-layout {
  direction: ltr;
  display: flex;
  flex-flow: row wrap;
  flex-grow: 1;
  list-style: none;
  margin-right: 0;
  margin-left: -8px;
  padding-right: 0;
  padding-left: 0;
  text-align: left;
  letter-spacing: -0.31em;
  text-rendering: optimizespeed;
}
.gel-layout {
  word-spacing: -0.43em;
}

@media (min-width: 37.5em) {
  .gel-layout {
    margin-left: -16px;
  }
}"
`;
